# djsuperadmin

./: .flake8  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Changelog.md  Contribute.md  How to.md  License.md  MANIFEST.in  Makefile  QuickStart.md  README.md  hashmap.json  index.html  llms-full.txt  llms.txt  manage.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  pytest.ini  setup.py  vite.config.mjs  webpack.config.js
.github/workflows/: cd.yml  ci.yml  doc.yml
Changelog/: index.html
Contribute/: index.html
How to/: index.html
License/: index.html
QuickStart/: index.html
assets/: Changelog_index.md.CA8PvCd0.js  Changelog_index.md.CA8PvCd0.lean.js  Changelog_index.md.CnSbwCld.js  Changelog_index.md.CnSbwCld.lean.js  Changelog_index.md.CxwfKSj9.js  Changelog_index.md.CxwfKSj9.lean.js  Changelog_index.md.Dk3u-cgQ.js  Changelog_index.md.Dk3u-cgQ.lean.js  Contribute_index.md.B50BXWMH.js  Contribute_index.md.Bn3aOXoB.js  Contribute_index.md.C7LqPQPK.js  Contribute_index.md.C7LqPQPK.lean.js  How to_index.md.BSCX7g6-.js  How to_index.md.BSCX7g6-.lean.js  How to_index.md.CbQi7rto.js  How to_index.md.CbQi7rto.lean.js  License_index.md.BwDaqjo1.lean.js  License_index.md.CeCKhEsT.js  QuickStart_index.md.D1Lee24y.js  QuickStart_index.md.D1Lee24y.lean.js  app.CJPr6TFU.js  app.CVHYP6XG.js  app.Cijv2G0W.js  app.D3ZQ00iw.js  app.DfyrMYSA.js  app.HNr-puYP.js  index.md.BWWMSVRU.js  index.md.X4VfZuiS.lean.js  style.BxKdOP5q.css
assets/chunks/: @localSearchIndexroot.4gUB6i4c.js  @localSearchIndexroot.B9fgbaRY.js  @localSearchIndexroot.BJMVnCNV.js  @localSearchIndexroot.BpZoZ_CC.js  @localSearchIndexroot.SLhGo9ML.js  @localSearchIndexroot.mviMmmyH.js  VPLocalSearchBox.B7Q9wvOy.js  VPLocalSearchBox.BRE9HpJn.js  VPLocalSearchBox.CTsm2fbJ.js  VPLocalSearchBox.DIXbTYp0.js  VPLocalSearchBox.H_xWTYHM.js  VPLocalSearchBox.sONJwb8s.js  framework.cg7huoEH.js  theme.CrzCUF7a.js  theme.DAzzNcIZ.js  theme.DnEpg2KN.js  theme.DxWMn17c.js  theme.LCw1SlUk.js  theme.WkTu7mlI.js
djsuperadmin/: api.py  apps.py  context_processors.py  mixins.py  models.py  serializers.py  settings.py  urls.py  views.py
djsuperadmin/migrations/: 0001_initial.py  0002_auto_20190610_1503.py  0002_contentversion.py
djsuperadmin/src/: index.js
djsuperadmin/static/: main.min.js  style.min.css
djsuperadmin/templatetags/: admintag.py  djsuperadmintag.py
docs/: index.md
docs/.vitepress/: config.mts
docs/How to/: index.md
insuperadmin/: apps.py  context_processors.py  gulpfile.js  package-lock.json  package.json  requirements.txt  serializers.py  urls.py  views.py
scripts/: sync-docs-from-root.sh
tests/: test_api.py  test_templatetags.py
(+27 files in other folders)
